kubernetes/apps/default/replicarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: replicarr
  namespace: default
  labels:
    app.kubernetes.io/name: replicarr
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: replicarr
    app.kubernetes.io/instance: replicarr
    app.kubernetes.io/name: replicarr
