kubernetes/apps/default/replicarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: replicarr
  namespace: default
  labels:
    app.kubernetes.io/name: replicarr
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - replicarr.iacob.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: replicarr
          port: 3000
